@@ -1,3 +1,8 @@
+2001-07-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Defaults.py: Remove BOUNCE_DATED_CC, BOUNCE_SENDER_CC, and add
+	BOUNCE_CONFIRM_CC.
+	
 2001-07-22  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Defaults.py: Remove CONFIRMATION_MODE, BOUNCE_DATED_TEMPLATE,
